# rules_haskell

./: README.md
haskell/: repl.bzl
tests/rh/rh_ghci_bug_a/: BUILD.bazel
tests/rh/rh_ghci_bug_a/src/A/: A.hs
tests/rh/rh_ghci_bug_bc/: BUILD.bazel
tests/rh/rh_ghci_bug_bc/src/BC/: B.hs  C.hs
