load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_library",
)
load(
    "@io_tweag_rules_haskell//haskell:repl.bzl",
    "haskell_repl",
)

# rh_ghci_bug_bc/BUILD.bazel
package(default_visibility = ["//visibility:public"])

haskell_library(
    name = "b",
    srcs = [
        "src/BC/B.hs",
    ],
    src_strip_prefix = "src",
    deps = [
        "//tests/rh/rh_ghci_bug_a:a",
        "//tests/hackage:base",
    ],
)

haskell_library(
    name = "c",
    srcs = [
        "src/BC/C.hs",
    ],
    src_strip_prefix = "src",
    deps = [
        ":b",
        # "//tests/rh/rh_ghci_bug_a:a", explicitly adding the transitive dependency fixes it
        "//tests/hackage:base",
    ],
)

haskell_repl(
    name = "c_repl",
    deps = [
        ":c",
    ],
    include = ["//tests/repro/rh_ghci_bug_bc:c"],
)
